--- a/style.css
+++ b/style.css
@@ -888,7 +888,7 @@ main.content {
   z-index: 2;
 }
 
-/* Hero title styles */
+/* Hero title styless */
 
 .hero-title-name {
   font-family: 'Courier Prime', monospace;
